--- a/CatalogPrinterApp/ResourceDictionary.xaml
+++ b/CatalogPrinterApp/ResourceDictionary.xaml
@@ -4,6 +4,8 @@
     <SolidColorBrush x:Key="ThemeColorBrush" Color="#2B579A"></SolidColorBrush>
     <SolidColorBrush x:Key="MainWindowSplitBorderBrush" Color="#CCCCCC"></SolidColorBrush>
     <SolidColorBrush x:Key="MainBlackFontColor" Color="#444444"></SolidColorBrush>
+    <SolidColorBrush x:Key="ControlHeaderBackgroundPressdBrush" Color="#D5E1F2"></SolidColorBrush>
+    <SolidColorBrush x:Key="ControlHeaderForegroundPressdBrush" Color="#19478A"></SolidColorBrush>
 
     <Style TargetType="Border" x:Key="CoreBorderStyle">
         <Setter Property="BorderBrush" Value="{DynamicResource ThemeColorBrush}"></Setter>
