--- a/CatalogPrinterApp/MainWindow.xaml
+++ b/CatalogPrinterApp/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen" SizeToContent="WidthAndHeight" SnapsToDevicePixels="True"
-        Background="White" AllowsTransparency="True" WindowStyle="None" ResizeMode="CanResizeWithGrip" MinHeight="100" MinWidth="400">
+        Background="White" AllowsTransparency="True" WindowStyle="None" ResizeMode="NoResize" MinHeight="100" MinWidth="400">
     <Border Style="{StaticResource CoreBorderStyle}">
     <Grid>
         <Grid.RowDefinitions>
