--- a/CatalogPrinterApp/MainWindow.xaml
+++ b/CatalogPrinterApp/MainWindow.xaml
@@ -14,8 +14,11 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="1"/>
+            <RowDefinition Height="*"/>
+         </Grid.RowDefinitions>
+         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
@@ -40,16 +43,23 @@
             </Grid>
             <Grid Grid.Row="1" Grid.ColumnSpan="2" Background="{StaticResource MainWindowSplitBorderBrush}"></Grid>
             <Grid Grid.Row="2" Visibility="Visible" Width="Auto"></Grid>
-                <Label Grid.Row="2"  Grid.Column="0" MinHeight="30" MinWidth="200" Content="Catalog Type" Width="200" Margin="10,10,10,10" HorizontalAlignment="Left" Foreground="{DynamicResource MainBlackFontColor}" FontFamily="Segoe UI Semilight" FontSize="20" VerticalAlignment="Center"></Label>
-                <ComboBox Grid.Row="2" Grid.Column="1" MinWidth="200" Width="200" Margin="10,10,10,10" FontFamily="Segoe UI Semilight" FontSize="20" HorizontalContentAlignment="Center" HorizontalAlignment="Right" VerticalContentAlignment="Center" VerticalAlignment="Top">
+                <Label Grid.Row="2"  Grid.Column="0" MinHeight="30" MinWidth="200" Content="Cataloog Type" Width="200" Margin="10,10,10,10" HorizontalAlignment="Left" Foreground="{DynamicResource MainBlackFontColor}" FontFamily="Segoe UI Semilight" FontSize="20" VerticalAlignment="Center"></Label>
+            <ComboBox x:Name="InputCatalogType" Grid.Row="2" Grid.Column="1" MinWidth="200" Width="200" Margin="10,10,10,10" FontFamily="Segoe UI Semilight" Style="{StaticResource ComboboxStyle}"
+                          FontSize="20" HorizontalContentAlignment="Center" HorizontalAlignment="Right" VerticalContentAlignment="Center" VerticalAlignment="Top">
                     <ComboBoxItem Content="Particulier" IsSelected="True"/>
                     <ComboBoxItem Content="Dakwerker"/>
                     <ComboBoxItem Content="Veranda"/>
                 </ComboBox>
-
             <Grid Grid.Row="3" Visibility="Visible" Width="Auto"></Grid>
-            <Label Grid.Row="3" Grid.Column="0" MinHeight="30" Content="Selectie Tarieven" Width="200" Margin="10,10,10,10" HorizontalAlignment="Left" Foreground="{DynamicResource MainBlackFontColor}" FontFamily="Segoe UI Semilight" FontSize="20" VerticalAlignment="Center"></Label>
-            <TextBox Grid.Row="3" Grid.Column="1" Width="200" Margin="10,10,10,10" FontSize="20" CharacterCasing="Lower" FontFamily="Segoe UI Semilight" HorizontalAlignment="Right" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" VerticalAlignment="Top"/>
+            <Label Grid.Row="3" Grid.Column="0" MinHeight="30" Content="Selectie Tarieven" Width="200" Margin="10,10,10,10" HorizontalAlignment="Left" Foreground="{DynamicResource MainBlackFontColor}" FontFamily="Segoe UI Semilight" FontSize="20" VerticalAlignment="Center"/>
+            <TextBox x:Name="InputTarief" Grid.Row="3" Grid.Column="1" Width="200" Margin="10,10,10,10" FontSize="20" CharacterCasing="Lower" FontFamily="Segoe UI Semilight" HorizontalAlignment="Right" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" VerticalAlignment="Top"/>
+            <Label Grid.Row="4" Grid.Column="0" MinHeight="30" Content="Selectie Pagina's" Width="200" Margin="10,10,10,10" HorizontalAlignment="Left" Foreground="{DynamicResource MainBlackFontColor}" FontFamily="Segoe UI Semilight" FontSize="20" VerticalAlignment="Center"/>
+            <TextBox x:Name="InputPages" Grid.Row="4" Grid.Column="1" Width="200" Margin="10,10,10,10" FontSize="20" CharacterCasing="Lower" FontFamily="Segoe UI Semilight" HorizontalAlignment="Right" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" VerticalAlignment="Top"/>
+            <CheckBox x:Name="InputBTW" Grid.Row="5" Grid.Column="0" Content="BTW" Margin="10,10,10,10" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="20" FontFamily="Segoe UI Semilight"/>
+
+            <Grid Grid.Row="6" Grid.ColumnSpan="2" Background="{StaticResource MainWindowSplitBorderBrush}"></Grid>
+            <Button Grid.Row="7" Grid.ColumnSpan="2" Name="PrintButton" Content="Print" Width="220" Height="36" Margin="10,10,10,10" TabIndex="8" FontSize="20" FontFamily="Segoe UI Semilight" Click="PrintButton_Click" />
+            
         </Grid>
     </Border>
 </Window>
