--- a/CatalogPrinterApp/MainWindow.xaml
+++ b/CatalogPrinterApp/MainWindow.xaml
@@ -56,10 +56,9 @@
             <Grid Grid.Row="3" Visibility="Visible" Width="Auto"></Grid>
             <Label Grid.Row="3" Grid.Column="0" MinHeight="30" Content="Selectie Tarieven" Width="200" Margin="10,10,10,10" HorizontalAlignment="Left" Foreground="{DynamicResource MainBlackFontColor}" FontFamily="Segoe UI Semilight" FontSize="20" VerticalAlignment="Center"/>
             <TextBox x:Name="InputTarief" PreviewTextInput="NumberValidationTextBox" Grid.Row="3" Grid.Column="1" Width="200" Margin="10,10,10,10" FontSize="20" CharacterCasing="Lower" FontFamily="Segoe UI Semilight" HorizontalAlignment="Right" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" VerticalAlignment="Top" />
-            <Label Grid.Row="4" Grid.Column="0" MinHeight="30" Content="Selectie Pagina's" Width="200" Margin="10,10,10,10" HorizontalAlignment="Left" Foreground="{DynamicResource MainBlackFontColor}" FontFamily="Segoe UI Semilight" FontSize="20" VerticalAlignment="Center"/>
-            <TextBox x:Name="InputPages" PreviewTextInput="NumberValidationTextBox" Grid.Row="4" Grid.Column="1" Width="200" Margin="10,10,10,10" FontSize="20" CharacterCasing="Lower" FontFamily="Segoe UI Semilight" HorizontalAlignment="Right" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" VerticalAlignment="Top" />
-            <CheckBox x:Name="InputBTW" Grid.Row="5" Grid.Column="0" Content="BTW" Margin="10,10,10,10" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="20" FontFamily="Segoe UI Semilight"/>
-
+            <CheckBox x:Name="InputBTW" Grid.Row="4" Grid.Column="0" Content="BTW" Margin="10,10,10,10" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="20" FontFamily="Segoe UI Semilight"/>
+            <ProgressBar Name="ProgressBar" Grid.Row="5" Grid.ColumnSpan="2" Visibility="Visible" Height="20" Margin="0,5,0,5" VerticalAlignment="Center" HorizontalAlignment="Center"  Width="300" Background="Transparent" BorderBrush="{StaticResource ThemeColorBrush}" Foreground="{DynamicResource ThemeColorBrush}" BorderThickness="1" IsIndeterminate="False" Value="{Binding InsertBindingHere}" />
+            <TextBlock Grid.Row="5" Grid.ColumnSpan="2" Text="{Binding ElementName=ProgressBar, Path=Value, StringFormat={}{0:0}%}" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold" />
             <Grid Grid.Row="6" Grid.ColumnSpan="2" Background="{StaticResource MainWindowSplitBorderBrush}"></Grid>
             <Button Grid.Row="7" Grid.ColumnSpan="2" Name="PrintButton" Content="Print" Width="220" Height="36" Margin="10,10,10,10" TabIndex="8" FontSize="20" FontFamily="Segoe UI Semilight" Click="PrintButton_Click" />
             
